@@ -18,4 +18,4 @@ void jswrap_serial_setup(JsVar *parent, JsVar *baud, JsVar *options);
 void jswrap_serial_print(JsVar *parent, JsVar *str);
 void jswrap_serial_println(JsVar *parent, JsVar *str);
 void jswrap_serial_write(JsVar *parent, JsVar *data);
-void jswrap_serial_onData(JsVar *parent, JsVar *funcVar);
+void jswrap_serial_inject(JsVar *parent, JsVar *args);
